GSR-5: fix pagination mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1369,11 +1369,6 @@ header .header {
   .header-nav {
     gap: 124px;
   }
-
-  .header-inner-wrapper .header-nav .primary-nav .nav-item {
-    padding-left: 24px;
-    padding-right: 24px;
-  }
 }
 
 @media (width>=1920px) {
