--- a/blocks/searchresult/searchresult.css
+++ b/blocks/searchresult/searchresult.css
@@ -306,11 +306,6 @@
   }
 }
 
-@media (min-width: 768px) {
-  .searchresult-wrapper .pagination-mobilephone {
-    display: none;
-  }
-}
 
 @media (max-width: 767px) {
   .search-suggestion-box {
@@ -327,41 +322,23 @@
     align-self: stretch;
     margin: 0;
   }
-
-  .searchresult-wrapper nav.pagination:not(.pagination-mobilephone) {
-    display: none;
-  }
-
-  .searchresult-wrapper .pagination-mobilephone .pagination-next:not(.disabled),
-  .searchresult-wrapper .pagination-mobilephone .pagination-prev:not(.disabled) {
-    display: flex;
-    width: 48px;
-    height: 48px;
-    padding: var(--spacing-4, 16px);
-    justify-content: center;
-    align-items: center;
-    flex: unset;
-    flex-shrink: 0;
-    aspect-ratio: 1/1;
+  .searchresult-wrapper .pagination .pagination-next,
+  .searchresult-wrapper .pagination .pagination-prev {
+    font-size: 0;
     border-radius: var(--border-border-radius-rounded-full, 9999px);
     border: 2px solid var(--button-icon-button-iconbtn-secondary-default-border, #8D713E);
-    background: var(--button-icon-button-iconbtn-primary-default-bg, #8D713E) !important;
-  }
-
-  .searchresult-wrapper .pagination-mobilephone .pagination-next.disabled,
-  .searchresult-wrapper .pagination-mobilephone .pagination-prev.disabled {
-    visibility: visible;
-    display: flex;
     width: 48px;
     height: 48px;
-    padding: var(--spacing-4, 16px);
-    justify-content: center;
-    align-items: center;
-    flex: unset;
-    flex-shrink: 0;
-    aspect-ratio: 1/1;
-    border-radius: var(--border-border-radius-rounded-full, 9999px);
-    border: 2px solid var(--button-icon-button-iconbtn-secondary-default-border, #8D713E);
-    background: var(--button-icon-button-iconbtn-primary-default-bg, white);
+    max-width: 48px;
+    position: relative;
+  }
+
+  .searchresult-wrapper .pagination .pagination-next >span,
+  .searchresult-wrapper .pagination .pagination-prev >span {
+    height: 14px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 }
